<resources>
    <string name="app_name">projectDemo</string>

    <!--引导页-->
    <string name="guide_skip_name">跳过</string>
    <string name="guide_name">观云1.0</string>
    <string name="guide_button_name">开启新旅程</string>

    <string name="wechat">微信</string>
    <string name="login">登录</string>
    <string name="phonenumber">手机号</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="other_login">第三方登录</string>
    <string name="country_city">国家/地区</string>
    <string name="get_voice_code">获取语音验证码</string>
    <string name="start_live">开启直播</string>
    <string name="alert_not_login">请登录后操作</string>
    <string name="alert_null_message">消息不能为空</string>
    <string name="alert_did_publish">请先关闭发布</string>
    <string name="alert_did_play">请先停止发布</string>
    <string name="progress_title">正在处理</string>
    <string name="progress_message">请耐心等待</string>
</resources>
